# proto-semantic-reviewer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
examples/: curl_examples.md  sample_review.py
examples/events/: bad_event.proto  good_event.proto
proto_semantic_reviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
protos/: .gitkeep
src/: __init__.py  __main__.py  agent.py  auth.py  logging_config.py  mcp_server.py  prompts.py  server.py  tool_definitions.py  tools.py  validation.py
src/adapters/: __init__.py  anthropic_adapter.py  base.py  factory.py  gemini_adapter.py  openai_adapter.py
src/knowledge/: __init__.py  aip_standards.py  loader.py  org_standards.py  wellknown_types.py
standards/aips/: aip-126.yaml  aip-132.yaml  aip-140.yaml  aip-141.yaml  aip-142.yaml  aip-143.yaml  aip-144.yaml  aip-145.yaml  aip-146.yaml  aip-148.yaml  aip-155.yaml  aip-158.yaml  aip-180.yaml  aip-202.yaml  aip-203.yaml  aip-213.yaml  aip-216.yaml
standards/org/: org-001.yaml
tests/: __init__.py  test_adapters.py  test_agent.py
tests/fixtures/: bad_example.proto  good_example.proto
